# Carcassonne_LO21_P22

./: CMakeLists.txt  README.md  Ressources.qrc  controleurpartie.cpp  controleurpartie.h  jeu_carcassonne.cpp  jeu_carcassonne.h  jeu_carcassonne.ui  main.cpp  vuemenu.cpp  vuemenu.h  vuemenu.ui  vuepartie.h  vuepartie.ui
controleur/: controleur.cpp  controleur.h  controleurpartie.h  jeu_carcassonne.cpp  jeu_carcassonne.h
modele/: zone.cpp  zone.h
modele/CasesTuilesEtZones/: Case.cpp  Case.h  Prairie.cpp  Prairie.h  Tuile.cpp  Tuile.h  Zone.cpp  Zone.h
modele/Gestion/: Config.cpp  Config.h  Coord.cpp  Coord.h  ParametresPartie.cpp  ParametresPartie.h  Partie.cpp  Partie.h  gestionScore.cpp  gestionScore.h
modele/JeuPiocheEtPlateau/: Jeu.cpp  Jeu.h  Pioche.cpp  Pioche.h  Plateau.cpp  Plateau.h
modele/JoueurEtRessources/: Joueur.cpp  Joueur.h  JoueurReel.cpp  JoueurReel.h  JoueurRessources.cpp  JoueurRessources.h  JoueurVirtuel.cpp  JoueurVirtuel.h  Meeple.cpp  Meeple.h
vue/: jeu_carcassonne.cpp  jeu_carcassonne.h  vue.cpp  vue.h  vuemenu.cpp  vuemenu.h  vuepartie.cpp
